--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     },
     "scripts": {
         "build": "webpack",
-        "dev": "webpack-dev-server --open",
-        "watch": "webpack-dev-server --watch-content-base --open"
+        "dev": "webpack && webpack-dev-server --open",
+        "watch": "webpack && webpack-dev-server --watch-content-base --open"
     },
     "optionalDependencies": {
         "fsevents": "^1.2.13"
