--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
         "@babel/core": "^7.11.1",
         "@babel/preset-env": "^7.11.0",
         "babel-loader": "^8.1.0",
-        "css-loader": "^4.2.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "css-loader": "^4.2.1",
+        "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.3.0",
         "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.14.1",
         "sass": "^1.26.10",
-        "sass-loader": "^9.0.2",
-        "style-loader": "^1.2.1"
+        "sass-loader": "^9.0.3",
+        "style-loader": "^1.2.1",
+        "url-loader": "^4.1.0"
     },
     "scripts": {
         "build": "webpack",
-        "dev": "webpack && webpack-dev-server --open",
-        "watch": "webpack && webpack-dev-server --watch-content-base --open"
+        "dev": "webpack && webpack-dev-server",
+        "watch": "webpack && webpack-dev-server --watch-content-base"
     },
     "optionalDependencies": {
         "fsevents": "^1.2.13"
